[gd_scene load_steps=13 format=3 uid="uid://dq26a4yywyp17"]

[ext_resource type="Script" path="res://Characters/alice.gd" id="1_aft4l"]
[ext_resource type="Texture2D" uid="uid://0tvti2x5qv7r" path="res://Graphics/Sprites/animations_Alice-Sheet.png" id="1_rjrgr"]
[ext_resource type="Resource" uid="uid://j8helsth2xy2" path="res://Inventory/playerInventory.tres" id="2_1xam4"]

[sub_resource type="Animation" id="Animation_pkc8e"]
length = 0.001
loop_mode = 2

[sub_resource type="Animation" id="Animation_bw2hc"]
resource_name = "down"
length = 0.8
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_4xmq4"]
resource_name = "idle"
length = 0.8
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 21]
}

[sub_resource type="Animation" id="Animation_vlr7c"]
resource_name = "idle_up"
length = 0.8
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [22, 23, 24, 25]
}

[sub_resource type="Animation" id="Animation_ufav2"]
resource_name = "run"
length = 0.8
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15, 16, 17]
}

[sub_resource type="Animation" id="Animation_s42ic"]
resource_name = "up"
length = 0.8
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ny5x0"]
_data = {
"RESET": SubResource("Animation_pkc8e"),
"down": SubResource("Animation_bw2hc"),
"idle": SubResource("Animation_4xmq4"),
"idle_up": SubResource("Animation_vlr7c"),
"run": SubResource("Animation_ufav2"),
"up": SubResource("Animation_s42ic")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wjw85"]
size = Vector2(8, 13.5)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kkxfg"]
radius = 6.0
height = 18.0

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_aft4l")
inventory = ExtResource("2_1xam4")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_rjrgr")
hframes = 26
frame = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_ny5x0")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.25)
shape = SubResource("RectangleShape2D_wjw85")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CapsuleShape2D_kkxfg")

[node name="CollectTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="CollectTimer" to="." method="_on_collect_timer_timeout"]
